
 o Oper: fixed bug with function [intersect]: now use G.E.compare instead of (=)
 o fixed "make install-findlib"

version 1.7, February 23, 2011
------------------------------
 o Makefile: fixed bug when installing ocamlgraph with ocamlfind
 o DGraph: fixed bug with colors on some windows manager
 o Configure: fixed issue with automatic detection of extension under
   Windows/Mingw

version 1.6, December 13, 2010
------------------------------
 o DGraph: new viewer mode (called `tree') which focus on a subset part of the
   graph centered on a given node
 o Graphviz: fixed bug with attribute `Constraint (was `Constraints) (patch by
   Boris Yakobowski)
 o DGraph: fixed font size issue when zooming
 o DGraph: now interpret text anchors and espaced sequences correctly
 o DGraph: offer possibility to disable the default callbacks on nodes
 o 'make -j' works again
 o new implementation Persistent.Digraph.ConcreteBidirectionalLabeled
 o new implementation Persistent.Digraph.ConcreteBidirectional
 o Makefile: bug fixed when ocamlc (resp. ocamlopt) and ocamlc.opt
   (resp. ocamlopt.opt) are unconsistent

version 1.5, April 29, 2010
---------------------------
 o Makefile: bug fixed when installing ocamlgraph with ocamlfind
   (patch by Virgile Prevosto)
 o DGraph: new method set_zoom_padding in DgraphView.view
 o Traverse.Dfs.has_cycle: can now be used on undirected graphs as well,
   and is now tail recursive
 o DGraph: handle dotted ellipse

version 1.4, March 24, 2010
---------------------------
 o new function [clear] for imperative graphs
 o new implementation Imperative.Digraph.ConcreteBidirectionalLabeled
   (contribution of Jaap Boender)
 o Dgraph displays graphs faster
 o DGraph: several bugs fixed
 o DGraph: several API changes
   (may break compatibility with existing development)

version 1.3, October 2, 2009
----------------------------
 o Oper.mirror: undirected graphs are not copied anymore
 o Oper.mirror: fixed bug (isolated vertices were lost)