@@ -1,4 +1,5 @@
 
+ o Sig.G: new function [find_all_edges] for each graph implementation
  o Oper: fixed bug with function [intersect]: now use G.E.compare instead of (=)
  o fixed "make install-findlib"
 
